<resources>
    <string name="app_name">Moodash</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibWFnaWNtaXp1a2kiLCJhIjoiY2xoM2MzZGJyMTd2bjNjcHFudXo2OG05OSJ9.VozXu-vmBXRyzdG0yhVIGA</string>
    <string name="loginApp">Login</string>
    <string name="signUpApp">Sign Up</string>
    <string name="inputName">Input your name:</string>
    <string name="inputEmail">Input your email:</string>
    <string name="inputPassword">Input your password: **more than 6 words</string>
    <string name="homeString">Home</string>
    <string name="moodString">Mood</string>
    <string name="recordString">Record</string>
    <string name="mapString">Map</string>
    <string name="collectionString">Collection</string>
    <string name="welcomeTxt">Welcome to Moodash</string>
    <string name="how_is_your_day_user_name">How is your day?\n :)</string>
    <string name="mood_of_the_day">Mood of the Day</string>
    <string name="write_something_to_remember">Write something to remember!</string>
    <string name="text">text</string>
    <string name="record">Record</string>
    <string name="nice_to_meet_you">NICE TO MEET YOU</string>
    <string name="start_journal">Start Journal</string>
    <string name="login_top">Hello ,\nwelcome back ;)</string>
    <string name="register">Register</string>
    <string name="email_address">Email address</string>
    <string name="password_hint">Password (at least six digits)</string>
    <string name="singup_top">Hello ,\nstart your journal today :)</string>
    <string name="user_name">User name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="home_top">Hello,\nrecord your day now ;)</string>
    <string name="map">Map</string>
    <string name="quote_collection">Quote Collection</string>
    <string name="report">Report</string>
    <string name="quote">Quote</string>
    <string name="not_save">Not Save</string>
    <string name="save">Save</string>
    <string name="loading">Loading…</string>
    <string name="please_enter_the_date">Please enter the date</string>
    <string name="confirm_hint">Are you sure to\ndelete this quote?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="today_s_wea">Today`s weather in</string>
    <string name="facebook_app_id">9192465744160994</string>
    <string name="facebook_client_token">9ba2e04a8c4332ade5883509b7a88af8</string>
    <string name="select_start_date">Select start date</string>
    <string name="select_end_date">Select end date</string>
    <string name="share_link">Love our app?\n Share me to Facebook!</string>
    <string name="work_manager">/** Work manager **/</string>
    <string name="search_button">SEARCH</string>
    <string name="no_data">No data yet\nRecord your mood from now!</string>
</resources>