<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/launch_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@color/_273431"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/launch_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:text="@string/nice_to_meet_you"
            android:textColor="@color/_273431"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <Button
        android:id="@+id/launch_start"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:text="@string/start_journal"/>

</androidx.appcompat.widget.LinearLayoutCompat>