<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="270dp"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/shape_r8_white"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/_73966a"
        android:text="@string/confirm_hint"
        android:gravity="center"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/confirm_yes"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/shape_r15_6c9ea5"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/fcfcfc"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/confirm_no"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:background="@drawable/shape_r15_6c9ea5"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/fcfcfc"
            android:textSize="14sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>