<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/D3D2CA"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingEnd="30dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/maxim_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/quote"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/maxim_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:ignore="SmallSp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/maxim_not_save"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:gravity="center"
            android:text="@string/not_save"
            android:textColor="@color/fcfcfc"
            android:textSize="14sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/maxim_save"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:background="@color/purple_500"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/fcfcfc"
            android:textSize="14sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>