<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login_top"
        android:textColor="@color/_273431"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_marginTop="34dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/_6abda6"
                android:text="@string/loginApp"
                android:layout_marginTop="15dp"/>

            <View
                android:layout_width="104dp"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/_6abda6" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black_60"
                android:text="@string/register"
                android:layout_marginTop="15dp"/>

            <View
                android:layout_width="104dp"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true" />

        </RelativeLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/f2f3f2"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/mail" />

                <EditText
                    android:id="@+id/login_email_input"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginStart="15dp"
                    android:background="@color/transparent"
                    android:hint="@string/email_address"
                    android:textColor="@color/_273431"
                    android:textColorHint="@color/_273431_60"
                    android:textSize="16sp"
                    android:text="email@monash.edu"/>

            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:background="@color/f2f3f2"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/padlock" />

                <EditText
                    android:id="@+id/login_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginStart="15dp"
                    android:background="@color/transparent"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textColor="@color/_273431"
                    android:textColorHint="@color/_273431_60"
                    android:textSize="16sp"
                    android:text="123456"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>

    <Button
        android:id="@+id/login_confirm_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:textStyle="normal"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:text="@string/loginApp"/>

</LinearLayout>